--- a/kvfiles/asset.kv
+++ b/kvfiles/asset.kv
@@ -33,7 +33,7 @@ ModalView:
                     radius:dp(10)
                     theme_text_color:"Custom"
                     text_color:app.theme_cls.primary_color
-                    on_press:app.stop()
+                    on_press:root.dismiss()
 
 ~~~
 
