--- a/kvfiles/chat.kv
+++ b/kvfiles/chat.kv
@@ -12,16 +12,18 @@
 		adaptive_height:True
 		padding:dp(10) 
 		orientation:"vertical"
-		md_bg_color:"#FCEFBA"
+		md_bg_color:app.chat_color
 		MDLabel:
+			markup:True
 			adaptive_height:True
 			text:root.text+str(app.ch_s(self.size))[:-4]
 			font_name:"assets/Poppins-Regular.ttf"
 	MDLabel:
-		pos_hint:{"center_y":0.85,"center_x":0.64}
-		text:root.nickname+" "+app.date()
-		font_name:"assets/Poppins-Medium.ttf"
+		pos_hint:{"center_y":0.85,"center_x":0.62}
+		text:root.nickname+"  [i]"+app.date()+"[/i]"
+		font_name:"assets/Poppins-Bold.ttf"
 		font_size:dp(10)
+		markup:True
 
 <PersonText>:
 	text:""
