--- a/kvfiles/chat.kv
+++ b/kvfiles/chat.kv
@@ -10,7 +10,7 @@
 		size_hint_x: 0.9
 		width:app.x()-dp(70)
 		adaptive_height:True
-		padding:dp(10) 
+		padding:dp(10)
 		orientation:"vertical"
 		md_bg_color:app.chat_color
 		MDLabel:
@@ -20,7 +20,7 @@
 			font_name:"assets/Poppins-Regular.ttf"
 	MDLabel:
 		pos_hint:{"center_y":0.85,"center_x":0.62}
-		text:root.nickname+"  [i]"+app.date()+"[/i]"
+		text:"[font=assets/SourceCodePro-Regular.otf] ["+app.date()+"][/font] : "+root.nickname
 		font_name:"assets/Poppins-Bold.ttf"
 		font_size:dp(10)
 		markup:True
@@ -41,13 +41,16 @@
 		md_bg_color:app.theme_cls.bg_normal
 		MDLabel:
 			adaptive_height:True
+			markup:True
 			text:root.text+str(app.ch_s(self.size))[:-4]
 			font_name:"assets/Poppins-Regular.ttf"
 	MDLabel:
 		pos_hint:{"center_y":0.85}
-		text:root.nickname+" "+app.date()
-		font_name:"assets/Poppins-Medium.ttf"
+		text:"["+app.date()+"] :"+root.nickname
+		text:"[font=assets/SourceCodePro-Regular.otf] ["+app.date()+"][/font] : "+root.nickname
+		font_name:"assets/Poppins-Bold.ttf"
 		font_size:dp(10)
+		markup:True
 
 ModalView:
 	background_color:0,0,0,0
@@ -68,7 +71,7 @@ ModalView:
 				md_bg_color:0,0,0,0
 				ScrollView:
 					size_hint:None,None 
-					size:main_handler.width,main_handler.height
+					size:main_handler.width,main_handler.height-dp(70)
 					id:view
 					scroll_type:["bars", "content"]
 					MDGridLayout:
@@ -76,6 +79,7 @@ ModalView:
 						adaptive_height:True
 						cols:1
 						spacing:dp(10)
+						MDLabel:
 			AnchorLayout:
 				anchor_y:"bottom"
 
@@ -99,7 +103,7 @@ ModalView:
 							font_name:"assets/Poppins-Regular.ttf"
 							on_focus:app.change_size_keyboard(main_handler)
 							keyboard_suggestions:True
-							on_text_validate:app.client[0](text_feild.text)
+							on_text_validate:app.client[0](text_feild.text);app.change_size_keyboard(main_handler)
 
 
 					MDIconButton:
