--- a/kvfiles/chat.kv
+++ b/kvfiles/chat.kv
@@ -14,16 +14,19 @@
 		orientation:"vertical"
 		md_bg_color:app.chat_color
 		MDLabel:
+			text:"[font=assets/SourceCodePro-Regular.otf]["+app.date()+"][/font] : "+"[color=#1976D2]"+root.nickname+"[/color]"
+			font_name:"assets/Poppins-Bold.ttf"
+			font_size:"13sp"
+			markup:True
+			halign:'left'
+		MDLabel:
 			markup:True
 			adaptive_height:True
 			text:root.text+str(app.ch_s(self.size))[:-4]
 			font_name:"assets/Poppins-Regular.ttf"
-	MDLabel:
-		pos_hint:{"center_y":0.85,"center_x":0.62}
-		text:"[font=assets/SourceCodePro-Regular.otf] ["+app.date()+"][/font] : "+root.nickname
-		font_name:"assets/Poppins-Bold.ttf"
-		font_size:dp(10)
-		markup:True
+			font_size:"15sp"
+
+
 
 <PersonText>:
 	text:""
@@ -40,18 +43,17 @@
 		orientation:"vertical"
 		md_bg_color:app.theme_cls.bg_normal
 		MDLabel:
-			adaptive_height:True
+			text:"[font=assets/SourceCodePro-Regular.otf]["+app.date()+"][/font] : "+"[color=#FF9800]"+root.nickname+"[/color]"
+			font_name:"assets/Poppins-Bold.ttf"
+			font_size:"13sp"
 			markup:True
+			halign:'left'
+		MDLabel:
+			markup:True
+			adaptive_height:True
 			text:root.text+str(app.ch_s(self.size))[:-4]
 			font_name:"assets/Poppins-Regular.ttf"
-	MDLabel:
-		pos_hint:{"center_y":0.85}
-		text:"["+app.date()+"] :"+root.nickname
-		text:"[font=assets/SourceCodePro-Regular.otf] ["+app.date()+"][/font] : "+root.nickname
-		font_name:"assets/Poppins-Bold.ttf"
-		font_size:dp(10)
-		markup:True
-
+			font_size:"15sp"
 ModalView:
 	background_color:0,0,0,0
 	on_open:app.open_modal(self)
@@ -103,11 +105,12 @@ ModalView:
 							font_name:"assets/Poppins-Regular.ttf"
 							on_focus:app.change_size_keyboard(main_handler,self)
 							keyboard_suggestions:True
-							on_text_validate:app.client[0](text_feild.text)#;app.change_size_keyboard(main_handler,self)
+							multiline: True
+
 
 
 					MDIconButton:
 						pos_hint:{"center_x":0.9,"center_y":0.62}
 						md_bg_color:app.theme_cls.primary_color
 						icon:"send"
-						on_press:app.client[0](text_feild.text)
+						on_press:app.client[0](text_feild.text);text_feild.focus = False
