Some keyborad fixes

--- a/kvfiles/chat.kv
+++ b/kvfiles/chat.kv
@@ -113,4 +113,4 @@ ModalView:
 						pos_hint:{"center_x":0.9,"center_y":0.62}
 						md_bg_color:app.theme_cls.primary_color
 						icon:"send"
-						on_press:app.client[0](text_feild.text);text_feild.focus = False
+						on_press:app.client[0](text_feild.text);text_feild.focus = True;text_feild.active = True
