--- a/kvfiles/settings_view.kv
+++ b/kvfiles/settings_view.kv
@@ -42,7 +42,7 @@ ModalView:
 			bold:True
 			font_name:"assets/Poppins-Bold.ttf"
 			font_size:"35sp"
-		MDCard:
+		MDCustomCard:
 			size_hint:None,None
 			size:app.x(),dp(300)
 			pos_hint:{"center_x":0.5,"center_y":0.7}
