--- a/kvfiles/theme.kv
+++ b/kvfiles/theme.kv
@@ -4,7 +4,7 @@ ModalView:
 	background_color: (0,0,0,0.3)
 	opacity: 0
 	RelativeLayout:
-		MDCard:
+		MDCustomCard:
 			size_hint:None ,None 
 			size:app.x()-dp(40),app.y()//1.5
 			radius:dp(20)
