--- a/kvfiles/settings_view.kv
+++ b/kvfiles/settings_view.kv
@@ -58,6 +58,7 @@ ModalView:
 			MDSeparator:
 			ListIcon:
 				text:"Change theme"
+				press:app.open_theme
 			ListIcon:
 				text:"Change chat wallpaper"
 				press:app.open_wall
