--- a/main.kv
+++ b/main.kv
@@ -218,7 +218,7 @@ MDScreen:
 			MDLabel:
 				size_hint:None,None 
 				size:dp(280),dp(30)
-				text:"Made with Love and Python"
+				text:"A private chat platform"
 				halign:"center"
 				font_name:"assets/Poppins-Regular.ttf"
 				font_size:"15sp"
