--- a/kvfiles/lock.kv
+++ b/kvfiles/lock.kv
@@ -27,13 +27,13 @@ MDScreen:
 		keep_ratio:False
 	FrostedGlass:
 		background:back
-		blur_size: 10
+		blur_size: 20
 		saturation: 1.2
 		luminosity: 1.3
-		overlay_color:[app.theme_cls.bg_light[0],app.theme_cls.bg_light[1],app.theme_cls.bg_light[2],app.theme_cls.bg_light[3]-0.5]
-		noise_opacity: 0.05
+		overlay_color:[app.theme_cls.bg_light[0],app.theme_cls.bg_light[1],app.theme_cls.bg_light[2],app.theme_cls.bg_light[3]-0.4]
+		noise_opacity: 0.01
 		border_radius: [0,0,0,0]	
-		outline_color: "#00000000"
+		outline_color: [0,0,0,0]
 	MDBoxLayout:	
 		size_hint:None,None 
 		size:app.x()-dp(50),dp(1)
