--- a/kvfiles/server_start.kv
+++ b/kvfiles/server_start.kv
@@ -29,11 +29,11 @@ ModalView:
 					MDTextField:
 						id:test_text_feild
 						mode:"fill"
-						max_text_length:5
+						max_text_length:20
 						radius:dp(10),dp(10),dp(10),dp(10)
 						line_color_normal:0,0,0,0
 						line_color_focus:0,0,0,0
-						hint_text:"Enter the port (Eg :9876)"
+						hint_text:"Server with port (Eg: 127.0.0.1:9876)"
 						font_name_hint_text:"assets/Poppins-Regular.ttf"
 						active_line:False
 						font_name:"assets/Poppins-Regular.ttf"
