--- a/main.kv
+++ b/main.kv
@@ -60,7 +60,7 @@ MDScreen:
 							icon:"plus"
 						MDCustomCard:
 							md_bg_color:0,0,0,0
-							on_press:app.chat_view.open()
+							on_press:app.load_ad();app.chat_view.open()
 			MDScreenG:
 				name:"server"
 				md_bg_color:app.theme_cls.bg_darkest
